# erebus

./: .gitignore  CMakeLists.txt  Doxyfile  README.md  format-code.sh  insert-new-lines.sh
include/: CMakeLists.txt  file.h  file_reader.h  file_system.h  gtk_application_manager.h  gtk_file_hex_view.h  gtk_main_view.h  gtk_view_builder.h  gtk_widget_builder.h  logger.h  main_view.h  main_view_presenter.h  model.h  types.h
include/exceptions/: CMakeLists.txt  file_not_found.h  invalid_parent.h  no_such_element.h
include/interfaces/: CMakeLists.txt  i_application_manager.h  i_main_view.h  i_main_view_presenter.h  i_model.h  i_presenter.h  i_view.h
include/presenter/: CMakeLists.txt  empty_view_presenter.h  hex_view_presenter.h  main_window_presenter.h  presenter_logger.h  view_container_presenter.h  view_presenter.h  view_window_presenter.h  window_presenter.h
include/presenter/interfaces/: CMakeLists.txt  i_empty_view_presenter.h  i_hex_view_presenter.h  i_main_window_presenter.h  i_presenter.h  i_view_container_presenter.h  i_view_presenter.h  i_view_window_presenter.h  i_window_presenter.h
include/view/: CMakeLists.txt  gui_manager.h  view_preference.h  view_preference_factory.h  view_preferences.h  view_preferences_loader.h  view_preferences_manager.h  view_preferences_saver.h  view_type.h  window_type.h
include/view/interfaces/: CMakeLists.txt  i_container.h  i_empty_view.h  i_gui_manager.h  i_gui_object.h  i_gui_state_object.h  i_hex_view.h  i_main_window.h  i_view.h  i_view_container.h  i_view_container_settings_propagator.h  i_view_window.h  i_window.h
include/view/preferences/: CMakeLists.txt  allow_multiple_application_instances_pref.h  always_show_tabs_pref.h  boolean_view_preference.h  close_empty_view_windows_pref.h  close_view_window_when_empty_pref.h
resources/: CMakeLists.txt
resources/view/: CMakeLists.txt  default_view_preferences.pref
resources/view/gtk/: CMakeLists.txt  empty_view.glade  file_hex_view.glade  hex_view.glade  main_view.glade  main_window.glade  view1.glade  view_window.glade  viewport.glade
src/: CMakeLists.txt  types.h
src/core/: CMakeLists.txt  erebus.cc  file_reader.cc  file_reader.h  file_system.cc  logger.cc  types.cc
src/core/exceptions/: CMakeLists.txt  file_not_found.cc  file_not_found.h
src/core/file_types/: CMakeLists.txt  file.cc  file.h  types.h
src/gui/: .application.cc.kate-swp  CMakeLists.txt  application.cc  application.h
src/gui/frames/: CMakeLists.txt  main_frame.cc  main_frame.h
src/model/: CMakeLists.txt  model.cc
src/pattern/: CMakeLists.txt
src/pattern/observer/: CMakeLists.txt  action.cc  action.h  observable.cc  observable.h  observer.h
src/presenter/: CMakeLists.txt  empty_view_presenter.cc  hex_view_presenter.cc  main_view_presenter.cc  main_window_presenter.cc  view_container_presenter.cc  view_presenter.cc  view_window_presenter.cc  window_presenter.cc
src/view/: CMakeLists.txt  erebus.cc  view_preference.cc  view_preference_factory.cc  view_preferences.cc  view_preferences_loader.cc  view_preferences_manager.cc  view_preferences_saver.cc
src/view/gtk/: CMakeLists.txt  glade_file.cc  glade_files.cc  gtk_application_manager.cc  gtk_builder_factory.cc  gtk_empty_view.cc  gtk_file_hex_view.cc  gtk_gui_manager.cc  gtk_hex_view.cc  gtk_main_view.cc  gtk_main_window.cc  gtk_view.cc  gtk_view_builder.cc  gtk_view_container.cc  gtk_view_container_factory.cc  gtk_view_container_settings_propagator.cc  gtk_view_factory.cc  gtk_view_window.cc  gtk_widget_builder.cc  gtk_window.cc  gtk_window_factory.cc  gui_manager.cc  main_view.cc
src/view/gtk/include/: CMakeLists.txt  glade_file.h  glade_files.h  gtk_builder_factory.h  gtk_empty_view.h  gtk_gui_manager.h  gtk_gui_state_object.h  gtk_hex_view.h  gtk_logger.h  gtk_main_window.h  gtk_view.h  gtk_view_builder.h  gtk_view_container.h  gtk_view_container_factory.h  gtk_view_container_settings_propagator.h  gtk_view_factory.h  gtk_view_window.h  gtk_window.h  gtk_window_factory.h
src/view/preferences/: CMakeLists.txt  allow_multiple_application_instances_pref.cc  always_show_tabs_pref.cc  boolean_view_preference.cc  close_empty_view_windows_pref.cc  close_view_window_when_empty_pref.cc
test/: CMakeLists.txt
test/core/: CMakeLists.txt  file_reader_test.cc
test/core/file_types/: CMakeLists.txt  file_test.cc
